fix: landing page heading spacing (#54)

--- a/components/LandingPageContent/LandingPageContent.module.css
+++ b/components/LandingPageContent/LandingPageContent.module.css
@@ -17,11 +17,16 @@
 .wrapper h2 {
   text-align: center;
   color: var(--greentext);
-  margin: 40px 0;
+  margin: 0;
 }
 
 .wrapper h1 {
   text-transform: uppercase;
+  margin-top: 40px;
+}
+
+.wrapper h1 {
+  margin-bottom: 40px;
 }
 
 .column {
